--- a/proyecto/app/static/css/style.css
+++ b/proyecto/app/static/css/style.css
@@ -1,6 +1,4 @@
 @charset "utf-8";
-@import url("framework.css");
-@import url("framework2.css");
 * {
     margin: 0;
     padding: 0;
@@ -110,16 +108,6 @@ img:hover {
     background-color: #FFFFFF;
 }
 
-.heading {
-    text-align: center;
-    font-size: 18px;
-    margin-left: 6px;
-    text-decoration: underline;
-    color: #16a374;
-    text-shadow: #4EBE7B 0.1em 0.1em 0.2em;
-    font-style: italic;
-}
-
 .container {
     padding: 80px 0;
 }
@@ -135,6 +123,29 @@ img:hover {
     margin: 0;
 }
 
+.heading {
+    text-align: center;
+    font-size: 18px;
+    margin-left: 60px;
+    text-decoration: underline;
+    color: #16a374;
+    text-shadow: #4EBE7B 0.1em 0.1em 0.2em;
+    font-style: italic;
+}
+
+@keyframes slidein {
+    from {
+        margin-left: 100%;
+    }
+    to {
+        margin-left: 0%;
+    }
+    75% {
+        font-size: 150%;
+        margin-left: 20%;
+    }
+}
+
 
 /*Centra el texto sobre mi*/
 
@@ -144,8 +155,20 @@ img:hover {
     text-align: center;
 }
 
+.one_half.first {
+    margin-left: 50px;
+}
+
+.heading.textoSobremi {
+    margin-top: 80px;
+}
+
 
 /*Bocadillo del texto*/
+
+.hoc {
+    margin: 0 auto;
+}
 
 #testimonials article blockquote {
     margin-bottom: 20px;
@@ -154,15 +177,6 @@ img:hover {
     color: #7A7A7A;
     background-color: #e0f2f1;
     font-size: 15px;
-}
-
-
-/*Hace la foto redonda*/
-
-#testimonials article figure img {
-    float: left;
-    margin-right: 15px;
-    border-radius: 50%;
 }
 
 
@@ -197,8 +211,9 @@ h5.card-title {
     background: linear-gradient(#effcef, #ccedd2, #94d3ac, #2c7873);
     display: inline-block;
     margin: 0 0.05rem;
-    animation: bounce;
+    animation: reverse;
     animation-duration: 2s;
+    height: 25px;
 }
 
 .margenp {
@@ -213,22 +228,19 @@ h5.card-title {
 
 /*TRANSICION CAJITAS PATOLOGIAS*/
 
-div.cajita:hover {
-    width: 100px;
+div.cajita {
     height: 100px;
-    transition-property: width;
     transition-duration: 200s;
     transition-timing-function: linear;
     transition-delay: 200s;
 }
 
 div.cajita:hover {
-    width: 300px;
     height: 300px;
 }
 
 div.card.w-60 {
-    transition: width 2s, height 4s;
+    transition: width 2s, height 1s;
 }
 
 .dropdown-menu.show {
