Video tamaño completo y atlas patologias

--- a/proyecto/templates/app/index.html
+++ b/proyecto/templates/app/index.html
@@ -35,8 +35,8 @@
 <!--Intro Section video-->
 {% if videofile %}
 <section class="view intro-video">
-    <div class="col-lg-12 wow fadeIn">
-        <video class="video-fluid z-depth-1" autoplay loop controls muted>
+    <div class="wow fadeIn">
+        <video class="video-fluid z-depth-300 " autoplay loop controls muted>
             <source class="embed-responsive-item" src=' {{ MEDIA_URL }}{{ videofile }} ' type='video/mp4 ' 
                 allowfullscreen="" frameborder="50|7000" />
         </video>
