--- a/proyecto/templates/base.html
+++ b/proyecto/templates/base.html
@@ -74,7 +74,7 @@
         </div>
     </nav>
     {% block content%} {% endblock content %}
-    <footer>
+    <footer class="responsive">
 
         <div class="container-fluid d-flex justify-content-center footer mr-5  mt-5 iconos">
             {% for p in contacto %}
