--- a/proyecto/templates/app/index.html
+++ b/proyecto/templates/app/index.html
@@ -75,19 +75,19 @@
 
 </div>
 
-<div class="container-fluid mt-5">
-    <section id="testimonials" class="hoc">
-        <div class="row justify-content-center justify-content-md-center">
-            <div class="col-md-4">
-                <h6 class="heading font-x2 one_half mt-5 mb-3">{% trans 'SOBRE MÍ' %}</h6>
-                <article class="one_half first">
-                    <figure class="clear"><img class="rounded-circle" src="{{ mi.imagenPerfil.url }}" alt=""></figure>
-                </article>
-            </div>
-            <div class="col-md-7 ml-2 mt-5">
-                <h6 class="heading textoSobremi">{{ mi.nombreDr }}</h6>
-                <article class="one_half">
-                    <blockquote>{{ mi.textoPerfil }}</blockquote>
+<div class="container-fluid mt-5"> 
+    <section id="testimonials" class="hoc"> 
+        <div class="row justify-content-center justify-content-md-center mb-5"> 
+            <div class="col-md-4"> 
+                <h6 class="heading font-x2 one_half mr-4 mt-5 mb-3">SOBRE MÍ</h6> 
+                   <div class="embed-responsive-4by3"> 
+                        <div class="img-top ml-5" style="background-image: url('{{ mi.imagenPerfil.url }}')"></div> 
+                    </div> 
+            </div> 
+            <div class="col-md-7 ml-2 mt-5"> 
+                <h6 class="heading textoSobremi mr-4">{{ mi.nombreDr }}</h6> 
+                <article class="one_half"> 
+                    <blockquote>{{ mi.textoPerfil }}</blockquote> 
                 </article>
 
             </div>
@@ -97,6 +97,7 @@
     </section>
 
 </div>
+
 
 
 
