--- a/proyecto/templates/app/tratamientos.html
+++ b/proyecto/templates/app/tratamientos.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% load static %} {% load bootstrap4 %} {% block content%}
-<div class="container-fluid mt-4">
+<div class="container-fluid mt-4 mb-5">
     <div class="row row-cols-1 row-cols-md-3">
         {% for p in tra %}
         <div class="col">
