--- a/proyecto/templates/base.html
+++ b/proyecto/templates/base.html
@@ -26,7 +26,8 @@
             <img class="float-left" src="{{ mi.logo.url }}" alt="logo" style="width:220px;">
         </a>
 
-        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <i class="fas fa-bars" style="color:rgb(77, 184, 118); font-size:28px;">
                 </i></span>
@@ -57,14 +58,24 @@
                 <div>
                     <li class="idioma ml-5">
                         {% language 'en' %}
-                        <a class="" href="{% url 'app:index' %}">
-                            <i>EN</i>
-                        </a>
-                        {% endlanguage %} {% language 'es' %}
-                        <a class="" href="{% url 'app:index' %}">
-                            <i>ES</i>
-                        </a>
-                        {% endlanguage %}
+                        {% if idTemp %}
+                        <a class="" href="{% url template idTemp %}">
+                            {% else %}
+                            <a class="" href="{% url template %}">
+                                {% endif %}
+                                <i>EN</i>
+                            </a>
+                            {% endlanguage %}
+
+                            {% language 'es' %}
+                            {% if idTemp %}
+                            <a class="" href="{% url template idTemp %}">
+                                {% else %}
+                                <a class="" href="{% url template %}">
+                                    {% endif %}
+                                    <i>ES</i>
+                                </a>
+                                {% endlanguage %}
                     </li>
                 </div>
             </ul>
@@ -74,14 +85,14 @@
     <footer class="responsive">
 
 
-        <div class="container-fluid  justify-content-left footer mr-5 mt-5 iconos">
+        <div class="container-fluid  justify-content-left footer mr-5 iconos">
             <div class="row">
                 {% for p in contacto %}
                 <div class="col-md-6">
                     <h6 class="text-uppercase font-weight-bold ml-3"> {{ p.nombreCentro }}</h6>
                     <p class="iconos ml-3">
                         <i class="fas fa-home mr-3"></i>{{ p.direccion }}</p>
-                    <p class="iconos  ml-3" ">
+                    <p class="iconos  ml-3">
                         <i class="fas fa-envelope mr-3 "></i>{{ p.mail }}</p>
                     <p class="iconos ml-3 ">
                         <i class="fas fa-phone mr-3 "></i>{{ p.tel }}</p>
