--- a/proyecto/templates/app/infoTratamiento.html
+++ b/proyecto/templates/app/infoTratamiento.html
@@ -9,7 +9,7 @@
                 <div class="blog-details-area">
                     <img class="imgblog2" src="{{ trat.imagen.url }}" alt=""> {% autoescape off %}
 
-                    <h2 class="post-title titletrat">{{ trat.nombre }}</h2>
+                    <h2 class="post-title titletrat mt-3">{{ trat.nombre }}</h2>
                     <p class="descripcion">{{ trat.descripcion }}</p>
                     {% endautoescape %}
                 </div>
