--- a/proyecto/templates/app/infoBlog.html
+++ b/proyecto/templates/app/infoBlog.html
@@ -1,26 +1,24 @@
-{% extends 'app/index.html' %} {% load static %} {% load bootstrap4 %}
-
-{% block content%}
+{% extends 'app/index.html' %} {% load static %} {% load bootstrap4 %} {% block content%}
 
 
 <section class="dento--blog-area mt-50">
     <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-12 col-lg-8 mb-100">
-          <!-- Blog Details Area -->
-          <div class="blog-details-area">
-            <img class="imgblog2" src="{{ info.imagen.url }}" alt="">
+        <div class="row justify-content-center">
+            <div class="col-12 col-lg-8 mb-100">
+                <!-- Blog Details Area -->
+                <div class="blog-details-area">
+                    <img class="imgblog2" src="{{ info.imagen.url }}" alt="">
 
-            <h2 class="post-title">{{ info.titulo }}</h2>
-            <div class="post-meta">
-              <a href="#"><i class="icon_clock_alt"></i>{{ info.fecha }}</a>
+                    <h2 class="post-title mt-3">{{ info.titulo }}</h2>
+                    <div class="post-meta">
+                        <a href="#"><i class="icon_clock_alt"></i>{{ info.fecha }}</a>
+                    </div>
+                    <p>{{ info.descripcion }}</p>
+
+                </div>
             </div>
-            <p>{{ info.descripcion }}</p>
-            
-          </div>
         </div>
-      </div>
     </div>
-  </section>
+</section>
 
 {% endblock content%}
