--- a/proyecto/templates/app/testimonios.html
+++ b/proyecto/templates/app/testimonios.html
@@ -39,6 +39,8 @@
                                 <h4 class="font-weight-bold mt-4 colorN"> {{ p.nombre }}</h4>
 
                                 <h6 class="blue-text font-weight-bold my-3 colorN">Edad: {{ p.edad }}</h6>
+                                <h6 class="blue-text font-weight-bold my-3 colorN"> {{ p.fecha_publicacion }}</h6>
+
                                 <div class="col-md-12">
                                     <p class="font-weight-normal testi pb-3"><i class="fas fa-quote-left pr-10"></i>{{p.descripcion}}<i class="fas fa-quote-right pr-10"></i></p>
                                     <!--Review-->
