Final de proyecto

--- a/proyecto/templates/app/infoBlog.html
+++ b/proyecto/templates/app/infoBlog.html
@@ -7,7 +7,7 @@
             <div class="col-12 col-lg-8 mb-100">
                 <!-- Blog Details Area -->
                 <div class="blog-details-area">
-                    <img class="imgblog2" src="{{ info.imagen.url }}" alt="">
+                    <img class="imgblog2" src="{{ info.imagen.url }}" alt="imagen">
 
                     <h2 class="post-title mt-3">{{ info.titulo }}</h2>
                     <div class="post-meta">
