--- a/proyecto/templates/app/infoTratamiento.html
+++ b/proyecto/templates/app/infoTratamiento.html
@@ -7,7 +7,7 @@
             <div class="col-12 col-lg-8 mb-100">
                 <!-- Blog Details Area -->
                 <div class="blog-details-area">
-                    <img class="imgblog2" src="{{ trat.imagen.url }}" alt=""> {% autoescape off %}
+                    <img class="imgblog2" src="{{ trat.imagen.url }}" alt="imagen"> {% autoescape off %}
 
                     <h2 class="post-title titletrat mt-3">{{ trat.nombre }}</h2>
                     <p class="descripcion">{{ trat.descripcion }}</p>
