--- a/proyecto/templates/base.html
+++ b/proyecto/templates/base.html
@@ -20,59 +20,62 @@
 
 <body>
     <nav class="navbar navbar-expand-xl navbar-default">
+        <div class="col md-12 container-fluid mr-5">
 
-        <a class="navbar-brand d-flex align-items-center" href="{% url 'app:index' %}">
+            <a class="navbar-brand d-flex align-items-center" href="{% url 'app:index' %}">
 
-            <img class="float-left" src="{{ mi.logo.url }}" alt="logo" style="width:220px;">
-        </a>
+                <img class="float-left" src="{{ mi.logo.url }}" alt="logo" style="width:220px;">
+            </a>
 
-        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <i class="fas fa-bars" style="color:rgb(77, 184, 118); font-size:28px;">
                 </i></span>
         </button>
 
-        <div class="collapse navbar-collapse " id="navbarNav">
-            <ul class="nav navbar-nav">
+            <div class="collapse navbar-collapse " id="navbarNav">
+                <ul class="nav navbar-nav">
 
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'app:index' %}">{% trans 'INICIO' %}</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'app:index' %}">{% trans 'INICIO' %}</a>
+                    </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'app:tratamientos' %}">{% trans 'TRATAMIENTOS' %}</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'app:tratamientos' %}">{% trans 'TRATAMIENTOS' %}</a>
+                    </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'app:patologias' %}">{% trans 'PATOLOGÍAS' %}</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'app:patologias' %}">{% trans 'PATOLOGÍAS' %}</a>
+                    </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'app:blog' %}">{% trans 'BLOG' %}</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'app:blog' %}">{% trans 'BLOG' %}</a>
+                    </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'app:testimonios' %}">{% trans 'TESTIMONIOS' %}</a>
-                </li>
-                <div>
-                    <li class="idioma ml-5">
-                        {% language 'en' %} {% if idTemp %}
-                        <a class="" href="{% url template idTemp %}">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'app:testimonios' %}">{% trans 'TESTIMONIOS' %}</a>
+                    </li>
+                    <div>
+                    </div>
+                    <div class="col md-12 text-center">
+                        <li class="idioma ml-5">
+                            {% language 'en' %} {% if idTemp %}
+                            <a class="" href="{% url template idTemp %}">
                             {% else %}
                             <a class="" href="{% url template %}">
                                 {% endif %}
                                 <i>EN</i>
                             </a> {% endlanguage %} {% language 'es' %} {% if idTemp %}
-                        <a class="" href="{% url template idTemp %}">
+                            <a class="" href="{% url template idTemp %}">
                                 {% else %}
                                 <a class="" href="{% url template %}">
                                     {% endif %}
                                     <i>ES</i>
                                 </a> {% endlanguage %}
-                    </li>
-                </div>
-            </ul>
-        </div>
+                        </li>
+                    </div>
+                </ul>
+            </div>
     </nav>
     {% block content%} {% endblock content %}
     <footer class="responsive">
@@ -85,29 +88,27 @@
                     <h6 class="text-uppercase font-weight-bold ml-3"> {{ p.nombreCentro }}</h6>
                     <p class="iconos ml-3">
                         <i class="fas fa-home mr-3"></i>{{ p.direccion }}</p>
-                   {% if p.mail %} 
+                    {% if p.mail %}
                     <p class="iconos  ml-3">
                         <i class="fas fa-envelope mr-3 "></i>{{ p.mail }}</p>{% endif %}
                     <p class="iconos ml-3 ">
                         <i class="fas fa-phone mr-3 "></i>{{ p.tel }}</p>
                     {% if p.horario %}
-                     <p class="iconos ml-3 ">
-                      <i class="far fa-clock mr-3"></i>{{ p.horario }}</p>{% endif %}
-                  {% if p.instagram %}
-                       <p>
+                    <p class="iconos ml-3 ">
+                        <i class="fas fa-clock mr-3"></i>{{ p.horario }}</p>{% endif %} {% if p.instagram %}
+                    <p>
                         <a href="{{ p.instagram }}">
                             <img src="{% static '../media/static/img/instagram.png' %}" alt="New York" width="30" height="30"></a>
                     </p>
-                    {% endif %}
-                  {% if p.facebook %}
+                    {% endif %} {% if p.facebook %}
                     <p class="iconos ml-2 ">
                         <a href="{{ p.facebook }}">
                             <img src="{% static '../media/static/img/facebook.png' %}" alt="New York" width="40" height="40"></a>
                     </p>
-                    {% endif %} 
+                    {% endif %}
                 </div>
- {% endfor %}
-     
+                {% endfor %}
+
             </div>
 
         </div>
